crates/bit_tests/src/snapshots/geko_tests__sema__sema_1.snap
---
source: crates/bit_tests/src/sema.rs
expression: result
---
sema::break_outside_loop

  x couldn't use `break` statement outside of loop.
   ,-[test.bit:2:9]
 1 | 
 2 |         break;
   :         ^^|^^
   :           `-- this `break` statement is invalid.
 3 |         
   `----
